API/flask.yaml
#namespace 생성해주는 부분 추가 필요
#svc 바로 Loadbalancer로 해주는 부분 추가 필요
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask
  replicas: 1
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          # image: gcr.io/mystic-span-326003/votetest/target-flask:0.9
          image: coyahov2.azurecr.io/apitestv2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: flask
  type: LoadBalancer
