API/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: foo.example.com
    http:
      paths:
      - path: /apis/hello-server
        backend:
          serviceName: flask-service
          servicePort: http
